header footer OK / changement img en texte / Fonts 80% OK

--- a/index.html
+++ b/index.html
@@ -4,21 +4,46 @@
     <meta charset="UTF-8">
     <title>Oh my food !</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Damion|Lora:400,600,700|Montserrat:400,600,700,800|Satisfy|Yellowtail|Yesteryear&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Devonshire&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Croissant+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header class="header">
-    <img src="assets/img/logo_ohmyfood.png" alt="Logo de la société Oh my food !" class="header--logo"/>
+    <h1>Ohmyfood</h1>
 </header>
 <section class="main">
     <div class="main--menus">
-        <a href="" title="" class="main--menus-single"><img src="assets/img/menu-1b.png" alt="Menu du restaurant La note enchantée"></a>
-        <a href="" title="" class="main--menus-single"><img src="assets/img/menu-2b.png" alt="Menu du restaurant Le chic à la française"></a>
-        <a href="" title="" class="main--menus-single"><img src="assets/img/menu-3b.png" alt="Menu du restaurant Le délice des papilles"></a>
-        <a href="" title="" class="main--menus-single"><img src="assets/img/menu-4b.png" alt="Menu du restaurant La palette du goût"></a>
+        <a href="" title="" class="main--menus-single main--menus-1">
+            <i class="fab fa-itunes-note fa-2x"></i>
+            <p>La note enchantée</p>
+            <h2>MENU</h2>
+        </a>
+        <a href="" title="" class="main--menus-single main--menus-2">
+            <p>Le chic à la française</p>
+            <h2>Menu</h2>
+        </a>
+        <a href="" title="" class="main--menus-single main--menus-3">
+            <p>Le délice des papilles</p>
+            <h2>Menu</h2>
+        </a>
+        <a href="" title="" class="main--menus-single main--menus-4">
+            <p>La palette du goût</p>
+            <h2>Menu</h2>
+        </a>
+    </div>
+    <div class="main--next">
+        <h4>Prochainement</h4>
     </div>
 </section>
 <footer class="footer">
-
+    <span class="footer--mentions">Mentions légales</span>
+    <span class="footer--contact">Contactez nous</span>
 </footer>
+<script type="text/javascript" src="https://use.fontawesome.com/e51c2e96ea.js"></script>
 </body>
 </html>
