--- a/index.html
+++ b/index.html
@@ -17,30 +17,38 @@
 <header class="header">
     <h1>Ohmyfood</h1>
 </header>
-<section class="main">
+<main class="main">
     <div class="main--menus">
         <a href="" title="" class="main--menus-single main--menus-1">
-            <i class="fab fa-itunes-note fa-2x"></i>
-            <p>La note enchantée</p>
-            <h2>MENU</h2>
+            <div class="menu--1-txt">
+                <i class="fab fa-itunes-note fa-2x"></i>
+                <p>La note enchantée</p>
+                <h2>MENU</h2>
+            </div>
         </a>
         <a href="" title="" class="main--menus-single main--menus-2">
-            <p>Le chic à la française</p>
-            <h2>Menu</h2>
+            <div class="menu--2-txt">
+                <p>Le chic à la française</p>
+                <h2>Menu</h2>
+            </div>
         </a>
         <a href="" title="" class="main--menus-single main--menus-3">
-            <p>Le délice des papilles</p>
-            <h2>Menu</h2>
+            <div class="menu--3-txt">
+                <p>Le délice des papilles</p>
+                <h2>Menu</h2>
+            </div>
         </a>
         <a href="" title="" class="main--menus-single main--menus-4">
-            <p>La palette du goût</p>
-            <h2>Menu</h2>
+            <div class="menu--4-txt">
+                <p>La palette du goût</p>
+                <h2>Menu</h2>
+            </div>
         </a>
     </div>
     <div class="main--next">
-        <h4>Prochainement</h4>
+        <div>Prochainement</div>
     </div>
-</section>
+</main>
 <footer class="footer">
     <span class="footer--mentions">Mentions légales</span>
     <span class="footer--contact">Contactez nous</span>
