--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 <main class="main">
     <div class="main--menus">
-        <a href="" title="" class="main--menus-single main--menus-1">
+        <a href="menu1.html" title="" class="main--menus-single main--menus-1">
             <div class="menu--1-txt">
                 <i class="fab fa-itunes-note fa-2x"></i>
                 <p>La note enchantée</p>
@@ -50,8 +50,8 @@
     </div>
 </main>
 <footer class="footer">
-    <span class="footer--mentions">Mentions légales</span>
-    <span class="footer--contact">Contactez nous</span>
+    <span class="footer--mentions"><a href="https://github.com/nzhiti/P3_ZHITI_Nicolas" target="_blank">Mentions légales</a></span>
+    <span class="footer--contact"><a href="mailto:nzhiti@gmail.com">Contactez nous</a></span>
 </footer>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </body>
