home page all OK

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Devonshire&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Croissant+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <meta name="description" content="Projet 3 du parcours Développeur web : Ohmyfood !">
+    <meta name="author" content="ZHITI Nicolas">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 
 </head>
 <body>
@@ -50,8 +53,12 @@
     </div>
 </main>
 <footer class="footer">
-    <span class="footer--mentions"><a href="https://github.com/nzhiti/P3_ZHITI_Nicolas" target="_blank">Mentions légales</a></span>
-    <span class="footer--contact"><a href="mailto:nzhiti@gmail.com">Contactez nous</a></span>
+    <span class="footer--mentions">
+        <a href="https://github.com/nzhiti/P3_ZHITI_Nicolas" target="_blank">Mentions légales</a>
+    </span>
+    <span class="footer--contact">
+        <a href="mailto:nzhiti@gmail.com">Contactez nous</a>
+    </span>
 </footer>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </body>
