--- a/menu1.html
+++ b/menu1.html
@@ -13,92 +13,104 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-<main class="menu1">
-    <div class="menu1--header">
-        <i class="fab fa-itunes-note fa-3x"></i>
-        <h1>La note enchantée</h1>
-    </div>
-    <section class="menu1--body">
-        <div class="menu1--body-title">
-            <img/>
-            <h2>Prélude</h2>
-            <img/>
+<header class="header">
+    <h1>Ohmyfood</h1>
+</header>
+<main class="page--menu1">
+    <h1>La note enchantée</h1>
+    <div class="menu1">
+        <div class="menu1--header">
+            <i class="fab fa-itunes-note fa-3x"></i>
+            <h2>La note enchantée</h2>
         </div>
-        <div class="menu1--body-content">
-            <div>
-                <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
-                <span>98 €</span>
+        <section class="menu1--body">
+            <div class="menu1--body-title">
+                <img/>
+                <h3>Prélude</h3>
+                <img/>
             </div>
-            <div>
-                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                <span>115 €</span>
+            <div class="menu1--body-content">
+                <div>
+                    <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
+                    <span>98 €</span>
+                </div>
+                <div>
+                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    <span>115 €</span>
+                </div>
+                <div>
+                    <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
+                    <span>89 €</span>
+                </div>
+                <div>
+                    <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
+                    <span>105 €</span>
+                </div>
             </div>
-            <div>
-                <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
-                <span>89 €</span>
+        </section>
+        <section class="menu1--body">
+            <div class="menu1--body-title">
+                <img/>
+                <h3>Prélude</h3>
+                <img/>
             </div>
-            <div>
-                <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
-                <span>105 €</span>
+            <div class="menu1--body-content">
+                <div>
+                    <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
+                    <span>98 €</span>
+                </div>
+                <div>
+                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    <span>115 €</span>
+                </div>
+                <div>
+                    <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
+                    <span>89 €</span>
+                </div>
+                <div>
+                    <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
+                    <span>105 €</span>
+                </div>
             </div>
+        </section>
+        <section class="menu1--body">
+            <div class="menu1--body-title">
+                <img/>
+                <h3>Prélude</h3>
+                <img/>
+            </div>
+            <div class="menu1--body-content">
+                <div>
+                    <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
+                    <span>98 €</span>
+                </div>
+                <div>
+                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    <span>115 €</span>
+                </div>
+                <div>
+                    <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
+                    <span>89 €</span>
+                </div>
+                <div>
+                    <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
+                    <span>105 €</span>
+                </div>
+            </div>
+        </section>
+        <div class="menu1--footer">
+            <i class="fab fa-itunes-note"></i>
+            <h2>La note enchantée</h2>
         </div>
-    </section>
-    <section class="menu1--body">
-        <div class="menu1--body-title">
-            <img/>
-            <h2>Prélude</h2>
-            <img/>
-        </div>
-        <div class="menu1--body-content">
-            <div>
-                <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
-                <span>98 €</span>
-            </div>
-            <div>
-                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                <span>115 €</span>
-            </div>
-            <div>
-                <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
-                <span>89 €</span>
-            </div>
-            <div>
-                <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
-                <span>105 €</span>
-            </div>
-        </div>
-    </section>
-    <section class="menu1--body">
-        <div class="menu1--body-title">
-            <img/>
-            <h2>Prélude</h2>
-            <img/>
-        </div>
-        <div class="menu1--body-content">
-            <div>
-                <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
-                <span>98 €</span>
-            </div>
-            <div>
-                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                <span>115 €</span>
-            </div>
-            <div>
-                <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
-                <span>89 €</span>
-            </div>
-            <div>
-                <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
-                <span>105 €</span>
-            </div>
-        </div>
-    </section>
-    <div class="menu1--footer">
-        <i class="fab fa-itunes-note"></i>
-        <h1>La note enchantée</h1>
     </div>
 </main>
-
-
+<footer class="footer">
+    <span class="footer--mentions">
+        <a href="https://github.com/nzhiti/P3_ZHITI_Nicolas" target="_blank">Mentions légales</a>
+    </span>
+    <span class="footer--contact">
+        <a href="mailto:nzhiti@gmail.com">Contactez nous</a>
+    </span>
+</footer>
 </body>
 </html>
