page menu presque terminée

--- a/menu1.html
+++ b/menu1.html
@@ -25,9 +25,9 @@
         </div>
         <section class="menu1--body">
             <div class="menu1--body-title">
-                <img/>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
                 <h3>Prélude</h3>
-                <img/>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
             </div>
             <div class="menu1--body-content">
                 <div>
@@ -50,51 +50,40 @@
         </section>
         <section class="menu1--body">
             <div class="menu1--body-title">
-                <img/>
-                <h3>Prélude</h3>
-                <img/>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
+                <h3>Point d'orgue</h3>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
             </div>
             <div class="menu1--body-content">
                 <div>
-                    <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
-                    <span>98 €</span>
+                    <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                    <span>102 €</span>
                 </div>
                 <div>
-                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                    <span>115 €</span>
+                    <p>Langoustine poêlée, purée de patate douce</p>
+                    <span>205 €</span>
                 </div>
                 <div>
-                    <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
-                    <span>89 €</span>
-                </div>
-                <div>
-                    <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
-                    <span>105 €</span>
+                    <p>Mijoté de queue de boeuf et riz sauvage aux zestes de citron</p>
+                    <span>169 €</span>
                 </div>
             </div>
         </section>
         <section class="menu1--body">
             <div class="menu1--body-title">
-                <img/>
-                <h3>Prélude</h3>
-                <img/>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
+                <h3>Mouvement final</h3>
+                <img src="assets/img/textdiv1.svg" alt="ligne horizontale"/>
             </div>
-            <div class="menu1--body-content">
+            <div class="menu1--body-content menu1--body-content-3">
                 <div>
-                    <p>Ravioles de foie gras accompagnés de leur crême à la truffe</p>
-                    <span>98 €</span>
+                    <p>Macarons noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                 </div>
                 <div>
-                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                    <span>115 €</span>
+                    <p>Baba au rhum revisité avec son coulis de citron</p>
                 </div>
                 <div>
-                    <p>Hommard et espuma de potiroon mariné aux zets d'orange</p>
-                    <span>89 €</span>
-                </div>
-                <div>
-                    <p>Foie gras de canard cuît entier, confiture de figue et pain toasté</p>
-                    <span>105 €</span>
+                    <p>Tarte au citron meringuée destructurée</p>
                 </div>
             </div>
         </section>
