--- a/menu1.html
+++ b/menu1.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Devonshire&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Croissant+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <meta name="description" content="Projet 3 du parcours Développeur web : Ohmyfood !">
+    <meta name="author" content="ZHITI Nicolas">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 </head>
 <body>
 <header class="header">
