--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 </head>
 <body>
 <header class="header">
-    <h1>Ohmyfood</h1>
+    <h1><a href="index.html" title="Retournez à l'accueil">Ohmyfood</a></h1>
 </header>
 <main class="main">
     <div class="main--menus">
-        <a href="menu1.html" title="" class="main--menus-single main--menus-1">
+        <a href="menu1.html" title="Menu La note enchantée" class="main--menus-single main--menus-1">
             <div class="menu--1-txt">
                 <i class="fab fa-itunes-note fa-2x"></i>
                 <p>La note enchantée</p>
                 <h2>MENU</h2>
             </div>
         </a>
-        <a href="" title="" class="main--menus-single main--menus-2">
+        <a href="menu2.html" title="Menu Le chic à la française" class="main--menus-single main--menus-2">
             <div class="menu--2-txt">
                 <p>Le chic à la française</p>
                 <h2>Menu</h2>
