--- a/menu1.html
+++ b/menu1.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <header class="header">
-    <h1>Ohmyfood</h1>
+    <h1><a href="index.html" title="Retournez à l'accueil">Ohmyfood</a></h1>
 </header>
 <main class="page--menu1">
     <h1>La note enchantée</h1>
