pages OK / responsive text wip

--- a/menu4.html
+++ b/menu4.html
@@ -19,74 +19,77 @@
 <header class="header">
     <h1><a href="index.html" title="Retournez à l'accueil">Ohmyfood</a></h1>
 </header>
-<main class="page--menu2">
-    <h1>Le chic à la française</h1>
-    <div class="menu2">
-        <div class="menu2--header">
-            <h2>Le chic à la française</h2>
+<main class="page--menu4">
+    <h1>La palette du goût</h1>
+    <div class="menu4">
+        <div class="menu4--header">
+            <h2>La palette du goût</h2>
         </div>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-1">
-                <img src="assets/img/textdiv2.svg" alt="ligne horizontale"/>
-                <h3>Pour se mettre en appétit</h3>
-                <img src="assets/img/textdiv2-2.svg" alt="ligne horizontale"/>
+        <section class="menu4--body">
+            <div class="menu4--body-title menu4--body-title-1">
+                <img src="assets/img/textdiv4.svg" alt="ligne horizontale"/>
+                <h3>Esquisse</h3>
+                <img src="assets/img/textdiv4-2.svg" alt="ligne horizontale"/>
             </div>
-            <div class="menu2--body-content">
+            <div class="menu4--body-content">
                 <div>
-                    <p>Tartare de pouple acidulé aux zests d'orange</p>
-                    <span>79 €</span>
+                    <p>Fricassée d'escargots au piment d'espelette</p>
+                    <span>60 €</span>
                 </div>
                 <div>
-                    <p>Vélouté de légumes d'antan</p>
-                    <span>57 €</span>
+                    <p>Oeuf au plat assaisonné à la truffe sur son lit de caviar</p>
+                    <span>55 €</span>
                 </div>
                 <div>
-                    <p>Soupe à l'oignon revisitée</p>
-                    <span>57 €</span>
-                </div>
-            </div>
-        </section>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-2">
-                <img src="assets/img/textdiv2-4.svg" alt="ligne horizontale"/>
-                <h3>Plaisir des papilles</h3>
-                <img src="assets/img/textdiv2-3.svg" alt="ligne horizontale"/>
-            </div>
-            <div class="menu2--body-content menu2--body-content-2">
-                <div>
-                    <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                    <span>95 €</span>
-                </div>
-                <div>
-                    <p>Magret de canard et parmentier de pommes de terres</p>
-                    <span>88 €</span>
-                </div>
-                <div>
-                    <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                    <span>175 €</span>
+                    <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                    <span>65 €</span>
                 </div>
             </div>
         </section>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-3">
-                <img src="assets/img/textdiv2-5.svg" alt="ligne horizontale"/>
-                <h3>Gourmandises sucrées</h3>
-                <img src="assets/img/textdiv2-6.svg" alt="ligne horizontale"/>
+        <section class="menu4--body">
+            <div class="menu4--body-title menu4--body-title-2">
+                <img src="assets/img/textdiv4.svg" alt="ligne horizontale"/>
+                <h3>Oeuvre de maître</h3>
+                <img src="assets/img/textdiv4-2.svg" alt="ligne horizontale"/>
             </div>
-            <div class="menu2--body-content menu2--body-content-3">
+            <div class="menu4--body-content menu4--body-content-2">
                 <div>
-                    <p>Pétales de violette glacés et purée de noisettes</p>
+                    <p>Filet de boeuf aux herbes accomapgné de sa ribambelle de légumes</p>
+                    <span>70 €</span>
                 </div>
                 <div>
-                    <p>Fondant au chocolat revisité</p>
+                    <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                    <span>85 €</span>
                 </div>
                 <div>
-                    <p>Millefeuille croustillant</p>
+                    <p>Filet de trubot aux agrumes</p>
+                    <span>125 €</span>
                 </div>
             </div>
         </section>
-        <div class="menu2--footer">
-            <h2>Le chic à la française</h2>
+        <section class="menu4--body">
+            <div class="menu4--body-title menu4--body-title-3">
+                <img src="assets/img/textdiv4.svg" alt="ligne horizontale"/>
+                <h3>Au sommet de l'art</h3>
+                <img src="assets/img/textdiv4-2.svg" alt="ligne horizontale"/>
+            </div>
+            <div class="menu4--body-content">
+                <div>
+                    <p>Paris-Brest</p>
+                    <span>55 €</span>
+                </div>
+                <div>
+                    <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
+                    <span>65 €</span>
+                </div>
+                <div>
+                    <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                    <span>60 €</span>
+                </div>
+            </div>
+        </section>
+        <div class="menu4--footer">
+            <h2>La palette du goût</h2>
         </div>
     </div>
 </main>
