--- a/menu3.html
+++ b/menu3.html
@@ -19,74 +19,77 @@
 <header class="header">
     <h1><a href="index.html" title="Retournez à l'accueil">Ohmyfood</a></h1>
 </header>
-<main class="page--menu2">
-    <h1>Le chic à la française</h1>
-    <div class="menu2">
-        <div class="menu2--header">
-            <h2>Le chic à la française</h2>
+<main class="page--menu3">
+    <h1>Le délice des papilles</h1>
+    <div class="menu3">
+        <div class="menu3--header">
+            <h2>Le délice des papilles</h2>
         </div>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-1">
-                <img src="assets/img/textdiv2.svg" alt="ligne horizontale"/>
-                <h3>Pour se mettre en appétit</h3>
-                <img src="assets/img/textdiv2-2.svg" alt="ligne horizontale"/>
+        <section class="menu3--body">
+            <div class="menu3--body-title menu3--body-title-1">
+                <img src="assets/img/textdiv3.svg" alt="ligne horizontale"/>
+                <h3>Pour bien commencer</h3>
+                <img src="assets/img/textdiv3-2.svg" alt="ligne horizontale"/>
             </div>
-            <div class="menu2--body-content">
+            <div class="menu3--body-content">
                 <div>
-                    <p>Tartare de pouple acidulé aux zests d'orange</p>
-                    <span>79 €</span>
+                    <p>Tartare de thon assaisonné au yuzu</p>
+                    <span>55 €</span>
                 </div>
                 <div>
-                    <p>Vélouté de légumes d'antan</p>
-                    <span>57 €</span>
+                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                    <span>89 €</span>
                 </div>
                 <div>
-                    <p>Soupe à l'oignon revisitée</p>
-                    <span>57 €</span>
-                </div>
-            </div>
-        </section>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-2">
-                <img src="assets/img/textdiv2-4.svg" alt="ligne horizontale"/>
-                <h3>Plaisir des papilles</h3>
-                <img src="assets/img/textdiv2-3.svg" alt="ligne horizontale"/>
-            </div>
-            <div class="menu2--body-content menu2--body-content-2">
-                <div>
-                    <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                    <span>95 €</span>
-                </div>
-                <div>
-                    <p>Magret de canard et parmentier de pommes de terres</p>
-                    <span>88 €</span>
-                </div>
-                <div>
-                    <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                    <span>175 €</span>
+                    <p>Velouté de cèpes aux truffes</p>
+                    <span>56 €</span>
                 </div>
             </div>
         </section>
-        <section class="menu2--body">
-            <div class="menu2--body-title menu2--body-title-3">
-                <img src="assets/img/textdiv2-5.svg" alt="ligne horizontale"/>
-                <h3>Gourmandises sucrées</h3>
-                <img src="assets/img/textdiv2-6.svg" alt="ligne horizontale"/>
+        <section class="menu3--body">
+            <div class="menu3--body-title menu3--body-title-2">
+                <img src="assets/img/textdiv3-4.svg" alt="ligne horizontale"/>
+                <h3>Pour bien continuer</h3>
+                <img src="assets/img/textdiv3-3.svg" alt="ligne horizontale"/>
             </div>
-            <div class="menu2--body-content menu2--body-content-3">
+            <div class="menu3--body-content menu3--body-content-2">
                 <div>
-                    <p>Pétales de violette glacés et purée de noisettes</p>
+                    <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                    <span>110 €</span>
                 </div>
                 <div>
-                    <p>Fondant au chocolat revisité</p>
+                    <p>Langouste rôtie et ses légumes de saison</p>
+                    <span>225 €</span>
                 </div>
                 <div>
-                    <p>Millefeuille croustillant</p>
+                    <p>Côté de boeuf angus et sa purée de panais</p>
+                    <span>115 €</span>
                 </div>
             </div>
         </section>
-        <div class="menu2--footer">
-            <h2>Le chic à la française</h2>
+        <section class="menu3--body">
+            <div class="menu3--body-title menu3--body-title-3">
+                <img src="assets/img/textdiv3-5.svg" alt="ligne horizontale"/>
+                <h3>Pour bien terminer</h3>
+                <img src="assets/img/textdiv3-6.svg" alt="ligne horizontale"/>
+            </div>
+            <div class="menu3--body-content">
+                <div>
+                    <p>Farandole de desserts du chef</p>
+                    <span>55 €</span>
+                </div>
+                <div>
+                    <p>Crème brulée revisitée</p>
+                    <span>60 €</span>
+                </div>
+                <div>
+                    <p>Tiramisu à la noisette</p>
+                    <span>55 €</span>
+                </div>
+            </div>
+        </section>
+        <div class="menu3--footer">
+            <h2>Le délice des papilles</h2>
         </div>
     </div>
 </main>
