semble OK attente validation mentor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </main>
 <footer class="footer">
     <span class="footer--mentions">
-        <a href="https://github.com/nzhiti/P3_ZHITI_Nicolas" target="_blank">Mentions légales</a>
+        <a href="mentions.html" target="_blank">Mentions légales</a>
     </span>
     <span class="footer--contact">
         <a href="mailto:nzhiti@gmail.com">Contactez nous</a>
