--- a/mentions.html
+++ b/mentions.html
@@ -20,36 +20,43 @@
 <header class="header">
     <h1><a href="index.html" title="Retournez à l'accueil">Ohmyfood</a></h1>
 </header>
-<main class="main">
-    <div class="main--menus">
-        <a href="menu1.html" title="Menu La note enchantée" class="main--menus-single main--menus-1">
-            <div class="menu--1-txt">
-                <i class="fab fa-itunes-note fa-2x"></i>
-                <p>La note enchantée</p>
-                <h2>MENU</h2>
-            </div>
-        </a>
-        <a href="menu2.html" title="Menu Le chic à la française" class="main--menus-single main--menus-2">
-            <div class="menu--2-txt">
-                <p>Le chic à la française</p>
-                <h2>Menu</h2>
-            </div>
-        </a>
-        <a href="menu3.html" title="Menu Lé délice des papilles" class="main--menus-single main--menus-3">
-            <div class="menu--3-txt">
-                <p>Le délice des papilles</p>
-                <h2>Menu</h2>
-            </div>
-        </a>
-        <a href="menu4.html" title="La palette du goût" class="main--menus-single main--menus-4">
-            <div class="menu--4-txt">
-                <p>La palette du goût</p>
-                <h2>Menu</h2>
-            </div>
-        </a>
-    </div>
-    <div class="main--next">
-        <div>Prochainement</div>
+<main class="mentions-legales">
+    <div class="mentions-legales-s">
+        <h1>Informations légales</h1>
+        <p>Merci de lire attentivement les présentes modalités d'utilisation du présent site avant de le parcourir. En vous connectant sur ce site, vous acceptez sans réserve les présentes modalités.</p>
+        <h2>Editeur du site</h2>
+        <p><br>ZHIT Nicolas</p>
+        <p>16 rue de la vieille Eglise</p>
+        <p>25560 - Frasne</p>
+        <p>Tél: 06 25 07 20 15</p>
+        <p>nzhiti.github.io/P3_ZHITI_Nicolas</p>
+        <h2>Conditions d'utilisations</h2>
+        <p>Le site accessible par les url suivants : Ohmyfood est exploité dans le respect de la législation française. L'utilisation de ce site est régie par les présentes conditions générales.   En utilisant le site, vous reconnaissez avoir pris connaissance de ces conditions et les avoir acceptées. Celles-ci pourront êtres modifiées à tout moment et sans préavis par la société Ohmyfood net.
+            Ohmyfood net ne saurait être tenu pour responsable en aucune manière d’une mauvaise utilisation du service. </p>
+        <h2>Responsable éditorial</h2>
+        <p><br>ZHIT Nicolas</p>
+        <p>16 rue de la vieille Eglise</p>
+        <p>25560 - Frasne</p>
+        <p>Tél: 06 25 07 20 15</p>
+        <p>nzhiti.github.io/P3_ZHITI_Nicolas</p>
+        <h2>Limite de responsabilité</h2>
+        <p>Les informations contenues sur ce site sont aussi précises que possibles et le site est périodiquement remis à jour, mais peut toutefois contenir des inexactitudes, des omissions ou des lacunes. Si vous constatez une lacune, erreur ou ce qui parait être un dysfonctionnement, merci de bien vouloir le signaler par email en décrivant le problème de la manière la plus précise possible (page posant problème, action déclenchante, type d’ordinateur et de navigateur utilisé, …).
+
+            Tout contenu téléchargé se fait aux risques et périls de l'utilisateur et sous sa seule responsabilité. En conséquence, Ohmyfood net ne saurait être tenu responsable d'un quelconque dommage subi par l'ordinateur de l'utilisateur ou d'une quelconque perte de données consécutives au téléchargement.
+
+            Les photos sont non contractuelles.
+
+            Les liens hypertextes mis en place dans le cadre du présent site internet en direction d'autres ressources présentes sur le réseau Internet ne sauraient engager la responsabilité de Ohmyfood net.</p>
+        <h2>Litiges</h2>
+        <p>Les présentes conditions sont régies par les lois françaises et toute contestation ou litiges qui pourraient naître de l'interprétation ou de l'exécution de celles-ci seront de la compétence exclusive des tribunaux dont dépend le   siège social de la société Ohmyfood net. La langue de référence, pour le règlement de contentieux éventuels, est le français.</p>
+        <h2>Conditions de service</h2>
+        <p>Ce site est proposé en langages HTML5 et CSS3, pour un meilleur confort d'utilisation et un graphisme plus agréable, nous vous recommandons de recourir à des navigateurs modernes comme Safari, Firefox, Chrome,...</p>
+        <h2>Informations et exclusion</h2>
+        <p>Ohmyfood net met en œuvre tous les moyens dont elle dispose, pour assurer une information fiable et une mise à jour fiable de ses sites internet. Toutefois, des erreurs ou omissions peuvent survenir. L'internaute devra donc s'assurer de l'exactitude des informations auprès de Ohmyfood net, et signaler toutes modifications du site qu'il jugerait utile. Ohmyfood net n'est en aucun cas responsable de l'utilisation faite de ces informations,   et de tout préjudice direct ou indirect pouvant en découler.</p>
+        <h2>Cookies</h2>
+        <p>Pour des besoins de statistiques et d'affichage, le présent site utilise des cookies. Il s'agit de petits fichiers textes stockés sur votre disque dur afin d'enregistrer des données techniques sur votre navigation. Certaines parties de ce site ne peuvent être fonctionnelle sans l’acceptation de cookies.</p>
+        <h2>Nous contacter</h2>
+        <p>Nicolas est à votre disposition pour tous vos commentaires ou suggestions. Vous pouvez nous écrire en français par courrier électronique à : nzhiti@gmail.com.</p>
     </div>
 </main>
 <footer class="footer">
