--- a/mentions.html
+++ b/mentions.html
@@ -67,6 +67,6 @@
         <a href="mailto:nzhiti@gmail.com">Contactez nous</a>
     </span>
 </footer>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </body>
 </html>
